test/files/neg/t3649.scala
object T { class C(s: String = ""); val C = 0 }
